expand Colab demo with a low-memory training run

--- a/notebooks/gola_colab_demo.ipynb
+++ b/notebooks/gola_colab_demo.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "[Open in Colab](https://colab.research.google.com/github/abhyudaymishr/GNOsLA/blob/main/notebooks/gola_colab_demo.ipynb)\n",
     "\n",
-    "This notebook installs `gola` from GitHub and runs dataset-backed visualizations in Colab."
+    "This notebook installs `gola` from GitHub, runs a low-memory training step (<8 GB profile), and generates dataset-backed visualizations in Colab.\n"
    ]
   },
   {
@@ -38,13 +38,16 @@
     "import plotly.io as pio\n",
     "from IPython.display import IFrame, Image, display\n",
     "\n",
+    "from gola.data import PreGenNavierStokes2DDataset\n",
+    "from gola.model import GOLAOperator\n",
+    "from gola.train import TrainConfig, train_operator\n",
     "from gola.visualization import DatasetAttentionConfig, save_dataset_sparse_geometric_attention\n",
     "from gola.visualization_plotly import PlotlyKernelVisualizationConfig, save_plotly_kernel_figure\n",
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "    pio.renderers.default = 'colab'\n",
     "\n",
-    "print('imports complete')"
+    "print('imports complete')\n"
    ]
   },
   {
@@ -60,6 +63,51 @@
     "data_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "np.save(data_path, demo)\n",
     "data_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Low-memory training run (<8 GB profile)\n",
+    "\n",
+    "Runs one quick epoch with `low_memory_mode=True` on a synthetic Navier-Stokes-like tensor.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "dataset = PreGenNavierStokes2DDataset.from_file(data_path, layout='STHWC', delta_t_steps=1, mmap=True)\n",
+    "\n",
+    "model = GOLAOperator(\n",
+    "    in_channels=dataset.channels,\n",
+    "    out_channels=dataset.channels,\n",
+    "    hidden_dim=96,\n",
+    "    num_layers=3,\n",
+    "    spatial_dim=dataset.x.shape[-1],\n",
+    "    residual_output=True,\n",
+    ")\n",
+    "\n",
+    "config = TrainConfig(\n",
+    "    epochs=1,\n",
+    "    batch_size=1,\n",
+    "    num_workers=0,\n",
+    "    learning_rate=1e-3,\n",
+    "    weight_decay=1e-6,\n",
+    "    radius=0.05,\n",
+    "    max_neighbors=24,\n",
+    "    graph_chunk_size=256,\n",
+    "    low_memory_mode=True,\n",
+    "    ram_budget_gb=8.0,\n",
+    "    device='cpu',\n",
+    "    log_every=10,\n",
+    ")\n",
+    "\n",
+    "history = train_operator(model, dataset, config)\n",
+    "history[-1]\n"
    ]
   },
   {
