switch Colab HF step from dry-run to real download

--- a/notebooks/gola_colab_demo.ipynb
+++ b/notebooks/gola_colab_demo.ipynb
@@ -147,9 +147,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional: Hugging Face dataset metadata\n",
+    "## Hugging Face dataset download (real run, no dry-run)\n",
     "\n",
-    "The target PreGen file is large (~50 GB). Use dry-run metadata first."
+    "Downloads the full file `Geometry_Axis/FPO_Geometry_Easy_NoObstacle.npy` (~50 GB).\n",
+    "\n",
+    "This cell checks available disk first, then performs a real `hf_hub_download`, opens the array with mmap, and runs a dataset-backed visualization.\n"
    ]
   },
   {
@@ -159,14 +161,33 @@
    "outputs": [],
    "source": [
     "from huggingface_hub import hf_hub_download\n",
+    "import os\n",
+    "import shutil\n",
     "\n",
-    "info = hf_hub_download(\n",
+    "root = '/content' if 'google.colab' in sys.modules else '.'\n",
+    "free_gb = shutil.disk_usage(root).free / (1024**3)\n",
+    "print(f'free_gb={free_gb:.2f}')\n",
+    "if free_gb < 60:\n",
+    "    raise RuntimeError('Need at least 60 GB free for this dataset download.')\n",
+    "\n",
+    "hf_file = hf_hub_download(\n",
     "    repo_id='sage-lab/PreGen-NavierStokes-2D',\n",
     "    filename='Geometry_Axis/FPO_Geometry_Easy_NoObstacle.npy',\n",
     "    repo_type='dataset',\n",
-    "    dry_run=True,\n",
     ")\n",
-    "info"
+    "\n",
+    "size_gb = os.path.getsize(hf_file) / (1024**3)\n",
+    "print('hf_file=', hf_file)\n",
+    "print(f'size_gb={size_gb:.2f}')\n",
+    "\n",
+    "arr = np.load(hf_file, mmap_mode='r')\n",
+    "print('shape=', arr.shape, 'dtype=', arr.dtype)\n",
+    "\n",
+    "real_png = Path('/content/gola_attention_real.png' if 'google.colab' in sys.modules else 'notebooks/gola_attention_real.png')\n",
+    "real_cfg = DatasetAttentionConfig(data_path=Path(hf_file), layout='auto', sample_idx=0, time_idx=0)\n",
+    "save_dataset_sparse_geometric_attention(real_png, config=real_cfg, dpi=180)\n",
+    "display(Image(filename=str(real_png)))\n",
+    "real_png\n"
    ]
   }
  ],
