add real-dataset Plotly 3D output to the Colab HF cell

--- a/notebooks/gola_colab_demo.ipynb
+++ b/notebooks/gola_colab_demo.ipynb
@@ -187,7 +187,18 @@
     "real_cfg = DatasetAttentionConfig(data_path=Path(hf_file), layout='auto', sample_idx=0, time_idx=0)\n",
     "save_dataset_sparse_geometric_attention(real_png, config=real_cfg, dpi=180)\n",
     "display(Image(filename=str(real_png)))\n",
-    "real_png\n"
+    "real_png\n",
+    "\n",
+    "real_html = Path('/content/gola_kernel_3d_real.html' if 'google.colab' in sys.modules else 'notebooks/gola_kernel_3d_real.html')\n",
+    "real_plotly_cfg = PlotlyKernelVisualizationConfig(\n",
+    "    mode='dataset',\n",
+    "    output_html=real_html,\n",
+    "    dataset=DatasetAttentionConfig(data_path=Path(hf_file), layout='auto', sample_idx=0, time_idx=0),\n",
+    "    random_query=True,\n",
+    ")\n",
+    "save_plotly_kernel_figure(real_plotly_cfg)\n",
+    "display(IFrame(src=str(real_html), width='100%', height=760))\n",
+    "real_html\n"
    ]
   }
  ],
