corrected some structures

--- a/notebooks/gola_colab_demo.ipynb
+++ b/notebooks/gola_colab_demo.ipynb
@@ -200,7 +200,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 572
+          "height": 940
         },
         "id": "Fm_SkO0w96RU",
         "outputId": "3b829dca-f36d-4cf3-e9d2-b8830db094cd"
@@ -412,13 +412,14 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 643
+          "height": 1000
         },
+        "collapsed": true,
         "id": "9MAgK1bAxCV5",
-        "outputId": "60dd1ab6-c18c-4f3e-b6a8-7c95dbd255fd"
+        "outputId": "2b465a76-5a42-4a90-dc66-cf0ac9790f87"
       },
       "id": "9MAgK1bAxCV5",
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,14 +448,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 12
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "real_html = Path('/conthtmlent/gola_kernel_3d_real.' if 'google.colab' in sys.modules else 'notebooks/gola_kernel_3d_real.html')\n",
+        "real_html = Path('/content/gola_kernel_3d_real.html' if 'google.colab' in sys.modules else 'notebooks/gola_kernel_3d_real.html')\n",
         "real_plotly_cfg = PlotlyKernelVisualizationConfig(\n",
         "    mode='dataset',\n",
         "    output_html=real_html,\n",
@@ -471,23 +472,23 @@
           "height": 798
         },
         "id": "E2rKtDNhDp-O",
-        "outputId": "d54f6410-5a22-4d25-90be-5550cc5724e9"
+        "outputId": "21ae5f20-58d0-4b30-caa5-42621a81a3de"
       },
       "id": "E2rKtDNhDp-O",
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7db8ec1a4980>"
+              "<IPython.lib.display.IFrame at 0x7db8c24c8260>"
             ],
             "text/html": [
               "\n",
               "        <iframe\n",
               "            width=\"100%\"\n",
               "            height=\"760\"\n",
-              "            src=\"/conthtmlent/gola_kernel_3d_real.\"\n",
+              "            src=\"/content/gola_kernel_3d_real.html\"\n",
               "            frameborder=\"0\"\n",
               "            allowfullscreen\n",
               "            \n",
@@ -501,11 +502,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "PosixPath('/conthtmlent/gola_kernel_3d_real.')"
+              "PosixPath('/content/gola_kernel_3d_real.html')"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 13
         }
       ]
     },
