give me some psychedelics now..

--- a/notebooks/gola_colab_demo.ipynb
+++ b/notebooks/gola_colab_demo.ipynb
@@ -16,13 +16,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oc4GAioN96RT",
-        "outputId": "c5c741a1-fafb-4335-a7cf-51d0cbe5945f"
+        "outputId": "e7a1a8f8-59d1-432f-cb74-5259d8e036a6"
       },
       "outputs": [
         {
@@ -45,13 +45,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kn4AjZ1N96RT",
-        "outputId": "daa58126-6b79-4191-9be7-495aaa6401d0"
+        "outputId": "9ae837c8-9a36-490a-d252-bcb7211cae9e"
       },
       "outputs": [
         {
@@ -85,13 +85,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "98rj19SO96RU",
-        "outputId": "206373ef-edd3-4fb2-dfd0-0ec917f596ca"
+        "outputId": "0a403774-3ae9-4336-c7b6-4c4233c67c62"
       },
       "outputs": [
         {
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 16
         }
       ],
       "source": [
@@ -135,31 +135,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhGJJf6o96RU",
-        "outputId": "9630ede8-9636-4671-8c90-02c20d794b2d"
+        "outputId": "91956f9d-5ddb-450f-d74a-0586ee8340fa"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[memory] low_memory_mode enabled | estimated_peak_ram_gb=0.03 | budget_gb=8.00\n",
-            "[epoch 001] loss=1.930522 field=1.930522 div=0.000000 energy=0.000000 enstrophy=0.000000\n"
+            "[epoch 001] loss=2.020476 field=2.020476 div=0.000000 energy=0.000000 enstrophy=0.000000\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'loss': 1.9305217663447063,\n",
-              " 'field': 1.9305217663447063,\n",
+              "{'loss': 2.020475963751475,\n",
+              " 'field': 2.020475963751475,\n",
               " 'div': 0.0,\n",
               " 'energy': 0.0,\n",
               " 'enstrophy': 0.0}"
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 17
         }
       ],
       "source": [
@@ -196,14 +196,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 940
         },
         "id": "Fm_SkO0w96RU",
-        "outputId": "3b829dca-f36d-4cf3-e9d2-b8830db094cd"
+        "outputId": "0be38027-38a5-4e34-e660-eb7a1f4c605e"
       },
       "outputs": [
         {
@@ -224,7 +224,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 18
         }
       ],
       "source": [
@@ -238,21 +238,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 798
         },
         "id": "XQBCj0I196RU",
-        "outputId": "2b9f62e5-67a6-47ec-82a3-aa04d5dcc274"
+        "outputId": "1181fe30-b8fe-4fc1-8346-3336737fa66e"
       },
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7db8c22a63c0>"
+              "<IPython.lib.display.IFrame at 0x7db8bf4e9580>"
             ],
             "text/html": [
               "\n",
@@ -277,7 +277,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 19
         }
       ],
       "source": [
@@ -416,10 +416,10 @@
         },
         "collapsed": true,
         "id": "9MAgK1bAxCV5",
-        "outputId": "2b465a76-5a42-4a90-dc66-cf0ac9790f87"
+        "outputId": "043eb137-051e-4219-c19c-7ff6fcedc800"
       },
       "id": "9MAgK1bAxCV5",
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 20
         }
       ]
     },
@@ -472,16 +472,16 @@
           "height": 798
         },
         "id": "E2rKtDNhDp-O",
-        "outputId": "21ae5f20-58d0-4b30-caa5-42621a81a3de"
+        "outputId": "f4db24a8-6f6d-40d6-a7f1-2d4b5d604a9b"
       },
       "id": "E2rKtDNhDp-O",
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7db8c24c8260>"
+              "<IPython.lib.display.IFrame at 0x7db8c23735c0>"
             ],
             "text/html": [
               "\n",
@@ -506,7 +506,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 21
         }
       ]
     },
