--- a/notebooks/gola_colab_demo.ipynb
+++ b/notebooks/gola_colab_demo.ipynb
@@ -16,13 +16,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oc4GAioN96RT",
-        "outputId": "e7a1a8f8-59d1-432f-cb74-5259d8e036a6"
+        "outputId": "e9f945da-ace0-4487-c40c-916b2647b1aa"
       },
       "outputs": [
         {
@@ -45,13 +45,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kn4AjZ1N96RT",
-        "outputId": "9ae837c8-9a36-490a-d252-bcb7211cae9e"
+        "outputId": "670deff5-7696-46e0-9e80-e0d9dfb5ef39"
       },
       "outputs": [
         {
@@ -85,13 +85,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "98rj19SO96RU",
-        "outputId": "0a403774-3ae9-4336-c7b6-4c4233c67c62"
+        "outputId": "f90736cb-52aa-41b3-9432-d75b34e14369"
       },
       "outputs": [
         {
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 47
         }
       ],
       "source": [
@@ -135,31 +135,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhGJJf6o96RU",
-        "outputId": "91956f9d-5ddb-450f-d74a-0586ee8340fa"
+        "outputId": "8993236c-3f31-4b4d-eb04-c7856b5ed8fc"
       },
-      "execution_count": 17,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[memory] low_memory_mode enabled | estimated_peak_ram_gb=0.03 | budget_gb=8.00\n",
-            "[epoch 001] loss=2.020476 field=2.020476 div=0.000000 energy=0.000000 enstrophy=0.000000\n"
+            "[epoch 001] loss=1.800714 field=1.800714 div=0.000000 energy=0.000000 enstrophy=0.000000\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'loss': 2.020475963751475,\n",
-              " 'field': 2.020475963751475,\n",
+              "{'loss': 1.8007141947746277,\n",
+              " 'field': 1.8007141947746277,\n",
               " 'div': 0.0,\n",
               " 'energy': 0.0,\n",
               " 'enstrophy': 0.0}"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 48
         }
       ],
       "source": [
@@ -196,14 +196,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 940
         },
         "id": "Fm_SkO0w96RU",
-        "outputId": "0be38027-38a5-4e34-e660-eb7a1f4c605e"
+        "outputId": "3cb03fef-0f2c-45db-8c4a-483d2c436ef7"
       },
       "outputs": [
         {
@@ -224,7 +224,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 49
         }
       ],
       "source": [
@@ -238,21 +238,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 798
         },
         "id": "XQBCj0I196RU",
-        "outputId": "1181fe30-b8fe-4fc1-8346-3336737fa66e"
+        "outputId": "e9cdd332-9864-472f-cdd9-3f2197511e4e"
       },
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7db8bf4e9580>"
+              "<IPython.lib.display.IFrame at 0x7db8bf5d7f50>"
             ],
             "text/html": [
               "\n",
@@ -277,7 +277,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 50
         }
       ],
       "source": [
@@ -416,10 +416,10 @@
         },
         "collapsed": true,
         "id": "9MAgK1bAxCV5",
-        "outputId": "043eb137-051e-4219-c19c-7ff6fcedc800"
+        "outputId": "050ee7bb-b836-4060-d686-716c94e02b4d"
       },
       "id": "9MAgK1bAxCV5",
-      "execution_count": 20,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,9 +448,30 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 51
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In these plots:\n",
+        "\n",
+        "1. `Light blue background/dots` = valid fluid domain nodes.\n",
+        "2. `Beige/cream blobs` = solid obstacle regions (holes in manifold).\n",
+        "3. `Red star` = query point \\(x_i\\).\n",
+        "4. `Top-right orange/yellow/red points` = Euclidean local ball around query.\n",
+        "5. `Magenta dashed circle` = Euclidean radius boundary.\n",
+        "6. `Bottom-left dark blue points` = geodesic-local support (reachable around obstacles).\n",
+        "7. `Bottom-right viridis points/edges`:\n",
+        "- dark purple = low attention weight\n",
+        "- green/yellow = high attention weight\n",
+        "8. `Red points in Euclidean panel (when present)` = Euclidean neighbors that are invalid for geodesic/PDE locality (e.g., blocked by obstacles)."
+      ],
+      "metadata": {
+        "id": "gjX-iTl3ltRg"
+      },
+      "id": "gjX-iTl3ltRg"
     },
     {
       "cell_type": "code",
